@@ -1,1 +1,1 @@
-DIST jekyll-sass-converter-1.2.0.gem 5120 SHA256 b4b2684a1a35e359d0a111f50761107e8ec05349c6abd470cf519fa4dcad4ca4 SHA512 0a406ba17dff146f68dad62f8c89322d48a22d133f26b741d6ad6c0529d3e8dcf1ec77c62a241189eab98d4829a14da0655e3c33788e93c56e70f719054f5210 WHIRLPOOL 69f22f1b004ab18f70549061fda7b3dc583ad0d70a51322affc7dee2e87a65ad466836c8794ece3202b90fa67d94762ca48e9fc815480b246d004c312696135a
+DIST jekyll-sass-converter-1.2.0.tar.gz 5661 SHA256 ab7795a5fef2592e67648d2e57132a3a1182b2bc50b4f806b17c12a4a0f07f61 SHA512 d1b6df59e033ccabadd486acb18d7b62ae4b738b3d6ab84ea90201d28644a6d787d029847766161d9b26866e111c0bc7d4b14d2ec4aeb440aa4ce94b6c82810f WHIRLPOOL ea44b8110c56c3500d0296a18a17494c0281c3fbb04371dabfa7f82d6ba25274b763aba763ac38d671c2f6f0bcc6ffe03e97eca1b7fcbcf4987f50406b57f41f
