@@ -6,12 +6,14 @@ EAPI=5
 USE_RUBY="ruby19 ruby20"
 
 RUBY_FAKEGEM_RECIPE_TEST="rspec"
+RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_EXTRADOC="README.md History.markdown"
 
 inherit ruby-fakegem
 
 DESCRIPTION="A basic Sass converter for Jekyll"
-HOMEPAGE="https://github.com/jekyll/jekyll-coffeescript"
+HOMEPAGE="https://github.com/jekyll/jekyll-sass-converter"
+SRC_URI="https://github.com/jekyll/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
@@ -20,3 +22,7 @@ IUSE=""
 
 ruby_add_rdepend "dev-ruby/sass"
 ruby_add_bdepend "test? ( >=www-apps/jekyll-2 )"
+
+all_ruby_prepare() {
+	rm Rakefile || die
+}
